DONOTMERGE touch 4.2 to 4.3 upgrade code

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -4042,7 +4042,7 @@ periodics:
     - command:
       - /bin/bash
       - -c
-      - "#!/bin/bash\nset -euo pipefail\n\ninitial=$(ARTIFACTS)/release-initial.json\nlatest=$(ARTIFACTS)/release-latest.json\nif
+      - "#!/bin/bash\nset -euo pipefail\n\necho 'Starting 4.2 to 4.3 upgrade'\ninitial=$(ARTIFACTS)/release-initial.json\nlatest=$(ARTIFACTS)/release-latest.json\nif
         ! curl --fail -X GET -G https://openshift-release.svc.ci.openshift.org/api/v1/releasestream/4-stable/latest
         --data-urlencode 'in=>4.2.0-0 <4.3.0-0' > ${initial}; then\n  echo \"error:
         Could not find a stable version\"\n  exit 1\nfi\nif ! curl --fail -X GET -G
