Fix the breaking change on ci-secret-mirroring-controller jobs

--- a/ci-operator/jobs/openshift/ci-secret-mirroring-controller/openshift-ci-secret-mirroring-controller-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/ci-secret-mirroring-controller/openshift-ci-secret-mirroring-controller-master-presubmits.yaml
@@ -22,7 +22,9 @@ presubmits:
         - --branch=master
         - --give-pr-author-access-to-namespace=true
         - --kubeconfig=/etc/apici/kubeconfig
-        - --lease-server=http://boskos
+        - --lease-server-password-file=/etc/boskos/password
+        - --lease-server-username=ci
+        - --lease-server=https://boskos-ci.svc.ci.openshift.org
         - --org=openshift
         - --repo=ci-secret-mirroring-controller
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
@@ -54,6 +56,9 @@ presubmits:
         - mountPath: /etc/apici
           name: apici-ci-operator-credentials
           readOnly: true
+        - mountPath: /etc/boskos
+          name: boskos
+          readOnly: true
         - mountPath: /usr/local/e2e-aws-build01-cluster-profile
           name: cluster-profile
         - mountPath: /usr/local/e2e-aws-build01
@@ -70,6 +75,12 @@ presubmits:
           - key: sa.ci-operator.apici.config
             path: kubeconfig
           secretName: apici-ci-operator-credentials
+      - name: boskos
+        secret:
+          items:
+          - key: password
+            path: password
+          secretName: boskos-credentials
       - name: cluster-profile
         projected:
           sources:
