Wire job-config-4.5 jobs into services

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -577,6 +577,9 @@ periodics:
       - name: job-config-44
         mountPath: /etc/job-config/4.4
         readOnly: true
+      - name: job-config-45
+        mountPath: /etc/job-config/4.5
+        readOnly: true
     volumes:
     - name: token
       secret:
@@ -608,6 +611,9 @@ periodics:
     - name: job-config-44
       configMap:
         name: job-config-4.4
+    - name: job-config-45
+      configMap:
+        name: job-config-4.5
 - agent: kubernetes
   labels:
     ci.openshift.io/role: infra
