--- a/core-services/ci-chat-bot/deploy.yaml
+++ b/core-services/ci-chat-bot/deploy.yaml
@@ -60,6 +60,10 @@ items:
             defaultMode: 420
             name: job-config-4.4
           name: job-config-44
+        - configMap:
+            defaultMode: 420
+            name: job-config-4.5
+          name: job-config-45
         containers:
         - name: bot
           image: ci-chat-bot:latest
@@ -90,6 +94,9 @@ items:
             readOnly: true
           - name: job-config-44
             mountPath: /etc/job-config/4.4
+            readOnly: true
+          - name: job-config-45
+            mountPath: /etc/job-config/4.5
             readOnly: true
           env:
           - name: BOT_TOKEN
