--- a/core-services/prow/03_deployment/hook.yaml
+++ b/core-services/prow/03_deployment/hook.yaml
@@ -127,6 +127,9 @@ items:
           - name: job-config-44
             mountPath: /etc/job-config/4.4
             readOnly: true
+          - name: job-config-45
+            mountPath: /etc/job-config/4.5
+            readOnly: true
           - mountPath: /etc/build-farm-credentials
             name: build-farm-credentials
             readOnly: true
@@ -177,6 +180,9 @@ items:
         - name: job-config-44
           configMap:
             name: job-config-4.4
+        - name: job-config-45
+          configMap:
+            name: job-config-4.5
         - name: build-farm-credentials
           secret:
             items:
