--- a/core-services/prow/03_deployment/horologium.yaml
+++ b/core-services/prow/03_deployment/horologium.yaml
@@ -59,6 +59,9 @@ items:
           - name: job-config-44
             mountPath: /etc/job-config/4.4
             readOnly: true
+          - name: job-config-45
+            mountPath: /etc/job-config/4.5
+            readOnly: true
           resources:
             requests:
               memory: "1.5Gi"
@@ -91,3 +94,6 @@ items:
         - name: job-config-44
           configMap:
             name: job-config-4.4
+        - name: job-config-45
+          configMap:
+            name: job-config-4.5
