--- a/core-services/prow/03_deployment/statusreconciler.yaml
+++ b/core-services/prow/03_deployment/statusreconciler.yaml
@@ -61,6 +61,9 @@ spec:
         - name: job-config-44
           mountPath: /etc/job-config/4.4
           readOnly: true
+        - name: job-config-45
+          mountPath: /etc/job-config/4.5
+          readOnly: true
         - name: plugins
           mountPath: /etc/plugins
           readOnly: true
@@ -99,6 +102,9 @@ spec:
       - name: job-config-44
         configMap:
           name: job-config-4.4
+      - name: job-config-45
+        configMap:
+          name: job-config-4.5
       - name: plugins
         configMap:
           name: plugins
