--- a/core-services/prow/03_deployment/tot.yaml
+++ b/core-services/prow/03_deployment/tot.yaml
@@ -94,6 +94,9 @@ items:
           - name: job-config-44
             mountPath: /etc/job-config/4.4
             readOnly: true
+          - name: job-config-45
+            mountPath: /etc/job-config/4.5
+            readOnly: true
           resources:
             requests:
               memory: "250Mi"
@@ -129,3 +132,6 @@ items:
         - name: job-config-44
           configMap:
             name: job-config-4.4
+        - name: job-config-45
+          configMap:
+            name: job-config-4.5
