--- a/core-services/prow/03_deployment/jenkins_operator.yaml
+++ b/core-services/prow/03_deployment/jenkins_operator.yaml
@@ -91,6 +91,9 @@ items:
           - name: job-config-44
             mountPath: /etc/job-config/4.4
             readOnly: true
+          - name: job-config-45
+            mountPath: /etc/job-config/4.5
+            readOnly: true
           resources:
             requests:
               memory: "250Mi"
@@ -130,6 +133,9 @@ items:
         - name: job-config-44
           configMap:
             name: job-config-4.4
+        - name: job-config-45
+          configMap:
+            name: job-config-4.5
 
 - apiVersion: v1
   kind: Service
@@ -233,6 +239,9 @@ items:
           - name: job-config-44
             mountPath: /etc/job-config/4.4
             readOnly: true
+          - name: job-config-45
+            mountPath: /etc/job-config/4.5
+            readOnly: true
           resources:
             requests:
               memory: "250Mi"
@@ -272,6 +281,9 @@ items:
         - name: job-config-44
           configMap:
             name: job-config-4.4
+        - name: job-config-45
+          configMap:
+            name: job-config-4.5
 
 - apiVersion: v1
   kind: Service
@@ -372,6 +384,9 @@ items:
           - name: job-config-44
             mountPath: /etc/job-config/4.4
             readOnly: true
+          - name: job-config-45
+            mountPath: /etc/job-config/4.5
+            readOnly: true
           resources:
             requests:
               memory: "250Mi"
@@ -411,3 +426,6 @@ items:
         - name: job-config-44
           configMap:
             name: job-config-4.4
+        - name: job-config-45
+          configMap:
+            name: job-config-4.5
