--- a/core-services/prow/03_deployment/tide.yaml
+++ b/core-services/prow/03_deployment/tide.yaml
@@ -97,6 +97,9 @@ items:
           - name: job-config-44
             mountPath: /etc/job-config/4.4
             readOnly: true
+          - name: job-config-45
+            mountPath: /etc/job-config/4.5
+            readOnly: true
           - name: tmp
             mountPath: /tmp
           - name: service-account
@@ -137,6 +140,9 @@ items:
         - name: job-config-44
           configMap:
             name: job-config-4.4
+        - name: job-config-45
+          configMap:
+            name: job-config-4.5
         - name: tmp
           emptyDir: {}
         - name: service-account
