--- a/core-services/release-controller/deploy-ocp-controller-ppc64le.yaml
+++ b/core-services/release-controller/deploy-ocp-controller-ppc64le.yaml
@@ -80,6 +80,10 @@ items:
             defaultMode: 420
             name: job-config-4.4
           name: job-config-44
+        - configMap:
+            defaultMode: 420
+            name: job-config-4.5
+          name: job-config-45
         containers:
         - name: controller
           image: release-controller:latest
@@ -110,6 +114,9 @@ items:
             readOnly: true
           - name: job-config-44
             mountPath: /etc/job-config/4.4
+            readOnly: true
+          - name: job-config-45
+            mountPath: /etc/job-config/4.5
             readOnly: true
           command:
           - /usr/bin/release-controller
