--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -60,7 +60,12 @@ presubmits:
             which kubectl
             which oc
 
+            echo "checking nodes for cluster"
             oc get nodes
+
+            echo "checking configuration"
+            env|grep KUBE
+            kubectl config view
 
             export DOCKER_PREFIX='dhiller'
             export DOCKER_TAG="latest"
@@ -72,9 +77,13 @@ presubmits:
             source /etc/profile.d/gimme.sh
 
             echo "creating manifests"
-            set +e # we set errors off because we don't care about the diff :-P
             bash -x ./hack/build-manifests.sh
-            set -e
+
+            echo "calling cluster-up to prepare config and check whether cluster is reachable"
+            bash -x ./cluster-up/up.sh
+
+            echo "checking cluster-up configuration"
+            cat $(cluster-up/kubeconfig.sh)
 
             echo "deploying"
             bash -x ./hack/cluster-deploy.sh
