Add 2nd config check

--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -61,8 +61,8 @@ tests:
     echo "calling cluster-up to prepare config and check whether cluster is reachable"
     bash -x ./cluster-up/up.sh
 
-    echo "checking cluster-up configuration"
-    cat $(cluster-up/kubeconfig.sh)
+    echo "checking cluster configuration after config prep"
+    kubectl config view
 
     echo "deploying"
     bash -x ./hack/cluster-deploy.sh
