--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -82,8 +82,8 @@ presubmits:
             echo "calling cluster-up to prepare config and check whether cluster is reachable"
             bash -x ./cluster-up/up.sh
 
-            echo "checking cluster-up configuration"
-            cat $(cluster-up/kubeconfig.sh)
+            echo "checking cluster configuration after config prep"
+            kubectl config view
 
             echo "deploying"
             bash -x ./hack/cluster-deploy.sh
