--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -756,6 +756,11 @@ periodics:
       command:
       - applyconfig
       env:
+      - name: build01_ci_reg_auth_value
+        valueFrom:
+          secretKeyRef:
+            key: build01_ci_reg_auth_value.txt
+            name: build-farm-credentials
       - name: slack_api_url
         valueFrom:
           secretKeyRef:
