Give release admins access to edit the multi arch ocp namespaces

--- a/cluster/ci/config/roles.yaml
+++ b/cluster/ci/config/roles.yaml
@@ -286,6 +286,32 @@ items:
 - kind: RoleBinding
   apiVersion: rbac.authorization.k8s.io/v1beta1
   metadata:
+    name: edit
+    namespace: ocp-s390x
+  subjects:
+  - kind: Group
+    apiGroup: rbac.authorization.k8s.io
+    name: release-admins
+  roleRef:
+    kind: ClusterRole
+    apiGroup: rbac.authorization.k8s.io
+    name: edit
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1beta1
+  metadata:
+    name: edit
+    namespace: ocp-ppc64le
+  subjects:
+  - kind: Group
+    apiGroup: rbac.authorization.k8s.io
+    name: release-admins
+  roleRef:
+    kind: ClusterRole
+    apiGroup: rbac.authorization.k8s.io
+    name: edit
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1beta1
+  metadata:
     name: admin
     namespace: ci-stg
   subjects:
