--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
@@ -441,7 +441,9 @@ objects:
         if test "${rc}" -eq 1; then echo "failed to create the infra resources"; exit 1; fi
 
         echo "Waiting for bootstrap to complete"
-        openshift-install --dir=/tmp/artifacts/installer wait-for bootstrap-complete
+        rc=1
+        for r in {1..2}; do openshift-install --dir=/tmp/artifacts/installer wait-for bootstrap-complete && rc=0 && break ; done
+        if test "${rc}" -eq 1; then echo "failed to bootstrap"; exit 1; fi
 
         echo "Removing bootstrap host from control plane api pool"
         (cd /tmp/artifacts/terraform && terraform apply -auto-approve=true -var=bootstrap_dns="false")
