Inject build01_ci_reg_auth_value from env. var.

--- a/core-services/build-farm/regcred_secret_template.yaml
+++ b/core-services/build-farm/regcred_secret_template.yaml
@@ -24,5 +24,4 @@ parameters:
   value: ci
 - description: ci registry auth value for build01
   name: build01_ci_reg_auth_value
-  value: "TODO in the next PR"
-  required: false
+  required: true
