Enable review_acts_as_lgtm for 2 more dptp repos

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -1075,6 +1075,8 @@ lgtm:
 - repos:
   - openshift/release
   - openshift/ci-tools
+  - openshift/ci-ns-ttl-controller
+  - openshift/ci-secret-mirroring-controller
   review_acts_as_lgtm: true
   trusted_team_for_sticky_lgtm: openshift-team-developer-productivity-test-platform
 - repos:
