--- a/core-services/prow/03_deployment/boskos.yaml
+++ b/core-services/prow/03_deployment/boskos.yaml
@@ -74,6 +74,9 @@ objects:
           ports:
             - containerPort: 8080
               protocol: TCP
+            - name: metrics
+              containerPort: 9090
+              protocol: TCP
           volumeMounts:
           - name: boskos-config
             mountPath: /etc/config
@@ -117,6 +120,10 @@ objects:
       protocol: TCP
       port: 80
       targetPort: 8080
+    - name: metrics
+      port: 9090
+      protocol: TCP
+      targetPort: 9090
 - apiVersion: v1
   kind: Secret
   metadata:
