OKD: don't promote machine-os-content from OCP
OKD uses fcos content so whenever ocp content changes it should not be 
synced to origin namespace

--- a/core-services/release-controller/_releases/release-ocp-4.3-ci.json
+++ b/core-services/release-controller/_releases/release-ocp-4.3-ci.json
@@ -13,6 +13,7 @@
         "namespace": "origin",
         "name": "4.3",
         "excludeTags": [
+          "machine-os-content",
           "machine-config-operator",
           "machine-config-operator-rpms",
           "installer",
