--- a/ci-operator/templates/openshift/openshift-azure/cluster-launch-e2e-azure.yaml
+++ b/ci-operator/templates/openshift/openshift-azure/cluster-launch-e2e-azure.yaml
@@ -162,7 +162,7 @@ objects:
         set -euo pipefail
 
         trap 'touch /tmp/shared/exit' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         # wait until the setup job completes successfully
         while true; do
@@ -279,7 +279,7 @@ objects:
           touch /tmp/shared/exit
         fi
         exit $rc' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         # aad integration configuration - we dont test aad so populate as dummy
         source /etc/azure/credentials/secret
@@ -401,7 +401,7 @@ objects:
         }
 
         trap 'teardown' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         # teardown is triggered on file marker
         for i in `seq 1 1440`; do
