--- a/ci-operator/templates/master-sidecar-3.yaml
+++ b/ci-operator/templates/master-sidecar-3.yaml
@@ -66,7 +66,7 @@ objects:
         set -euo pipefail
 
         trap 'touch /tmp/shared/exit' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         # wait until the master job creates admin.kubeconfig
         while true; do
@@ -104,7 +104,7 @@ objects:
           echo "Gathering artifacts ..."
         }
         trap 'teardown' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         (
           while true; do
