--- a/ci-operator/templates/openshift/endurance/endurance-install.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-install.yaml
@@ -321,7 +321,7 @@ objects:
 
         }
 
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
         teardown
 
     # Runs an install
