--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-custom-test-image.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-custom-test-image.yaml
@@ -168,7 +168,7 @@ objects:
         export PATH=/tmp/shared:$PATH
 
         trap 'touch /tmp/shared/exit' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         function patch_image_specs() {
           cat <<EOF >samples-patch.yaml
@@ -789,7 +789,7 @@ objects:
         }
 
         trap 'teardown' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         for i in $(seq 1 220); do
           if [[ -f /tmp/shared/exit ]]; then
