--- a/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-upgrade.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-upgrade.yaml
@@ -100,7 +100,7 @@ objects:
         export PATH=/usr/libexec/origin:$PATH
 
         trap 'touch /tmp/shared/exit' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         cp "$(which oc)" /tmp/shared/
 
@@ -190,7 +190,7 @@ objects:
         set -euo pipefail
 
         trap 'rc=$?; if [[ $rc -ne 0 ]]; then touch /tmp/shared/exit; else touch /tmp/shared/install; fi; exit $rc' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         ansible-playbook -vv \
           -e openshift_test_repo="${PREVIOUS_RPM_REPO}" \
@@ -223,7 +223,7 @@ objects:
         set -euo pipefail
 
         trap 'rc=$?; if [[ $rc -ne 0 ]]; then touch /tmp/shared/exit; else touch /tmp/shared/test; fi; exit $rc' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         while true; do
           if [[ ! -f /tmp/shared/install ]]; then
@@ -311,7 +311,7 @@ objects:
         }
 
         trap 'teardown' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         for i in `seq 1 180`; do
           if [[ -f /tmp/shared/exit ]]; then
