--- a/ci-operator/templates/openshift/openshift-ansible/cluster-launch-src.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-launch-src.yaml
@@ -111,7 +111,7 @@ objects:
         export PATH=/tmp/shared:$PATH
 
         trap 'touch /tmp/shared/exit' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         mkdir -p "${HOME}"
 
@@ -172,7 +172,7 @@ objects:
         set -euo pipefail
 
         trap 'rc=$?; if [[ $rc -ne 0 ]]; then touch /tmp/exit; fi; exit $rc' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         ansible-playbook -vv \
           -e openshift_test_repo=${RPM_REPO_OPENSHIFT_ORIGIN} -e 'oreg_url=${IMAGE_FORMAT}' \
@@ -250,7 +250,7 @@ objects:
         }
 
         trap 'teardown' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         for i in `seq 1 180`; do
           if [[ -f /tmp/shared/exit ]]; then
