--- a/ci-operator/templates/openshift/openshift-ansible/cluster-scaleup-e2e-40.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-scaleup-e2e-40.yaml
@@ -124,7 +124,7 @@ objects:
         export PATH=/usr/libexec/origin:$PATH
 
         trap 'touch /tmp/shared/exit' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         mkdir -p "${HOME}"
 
@@ -316,7 +316,7 @@ objects:
         set -euo pipefail
 
         trap 'rc=$?; if test "${rc}" -eq 0; then touch /tmp/scaleup-success; else touch /tmp/exit; fi; exit "${rc}"' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         echo -n "Waiting for cluster setup..."
 
@@ -499,7 +499,7 @@ objects:
         }
 
         trap 'teardown' EXIT
-        trap 'jobs -p | xargs -r kill; exit 0' TERM
+        trap 'jobs -p | xargs -r kill || true; exit 0' TERM
 
         for i in $(seq 1 220); do
           if [[ -f /tmp/shared/exit ]]; then
