use new-repo tool to try to start openshift-release stuff for oauth-apiserver

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -626,6 +626,7 @@ tide:
     - operator-framework/operator-registry
     - operator-framework/presto
     - openshift/file-integrity-operator
+    - openshift/oauth-apiserver
   - includedBranches:
     - release-4.0
     - release-4.1
@@ -818,6 +819,7 @@ tide:
     - operator-framework/operator-registry
     - operator-framework/presto
     - openshift/file-integrity-operator
+    - openshift/oauth-apiserver
   - includedBranches:
     - release-4.3
     labels:
@@ -1065,6 +1067,7 @@ tide:
     - operator-framework/operator-registry
     - operator-framework/presto
     - openshift/file-integrity-operator
+    - openshift/oauth-apiserver
   - labels:
     - lgtm
     - approved
