--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -89,6 +89,9 @@ approve:
   repos:
   - openshift-kni/baremetal-deploy
   require_self_approval: true
+- repos:
+  - openshift/oauth-apiserver
+  require_self_approval: false
 blunderbuss:
   max_request_count: 2
   request_count: 2
@@ -1096,6 +1099,9 @@ lgtm:
 - repos:
   - openshift/file-integrity-operator
   review_acts_as_lgtm: true
+- repos:
+  - openshift/oauth-apiserver
+  review_acts_as_lgtm: true
 override:
   allow_top_level_owners: true
 owners:
@@ -1905,6 +1911,8 @@ plugins:
   openshift/node-problem-detector-operator:
   - approve
   openshift/node_exporter:
+  - approve
+  openshift/oauth-apiserver:
   - approve
   openshift/oauth-proxy:
   - approve
