--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -79,6 +79,55 @@ presubmits:
             echo "creating manifests"
             bash -x ./hack/build-manifests.sh
 
+            echo "checking configuration locations"
+            echo "KUBECONFIG: ${KUBECONFIG}"
+            set +e
+            file "$HOME/.kube/config"
+            set -e
+
+            echo "patching cluster-up external provider"
+            cat >cluster-up/cluster/external/provider.sh <<FILE
+            #!/usr/bin/env bash
+
+            function _kubectl() {
+              kubectl "\$@"
+            }
+
+            function prepare_config() {
+              BASE_PATH=\${KUBEVIRTCI_CONFIG_PATH:-\$PWD}
+
+              ln -s \${KUBECONFIG:-\$HOME/.kube/config} \${BASE_PATH}/\$KUBEVIRT_PROVIDER/.kubeconfig
+
+              cat >\${BASE_PATH}/\$KUBEVIRT_PROVIDER/config-provider-\$KUBEVIRT_PROVIDER.sh <<EOF
+            kubeconfig=\\${BASE_PATH}/$KUBEVIRT_PROVIDER/.kubeconfig
+            docker_tag=\\${DOCKER_TAG}
+            docker_prefix=\\${DOCKER_PREFIX}
+            manifest_docker_prefix=\\${DOCKER_PREFIX}
+            image_pull_policy=\\${IMAGE_PULL_POLICY:-Always}
+            EOF
+            }
+
+            # The external cluster is assumed to be up.  Do a simple check
+            function up() {
+              prepare_config
+              _kubectl version >/dev/null
+              if [ \$? -ne 0 ]; then
+                echo -e "\n*** Unable to reach external cluster.  Please check configuration ***"
+                echo -e "*** Type \"kubectl config view\" for current settings               ***\n"
+                exit 1
+              fi
+              echo "Cluster is up"
+            }
+
+            function down() {
+              echo "Not supported by this provider"
+            }
+
+            FILE
+
+            echo "checking directory cluster-up/cluster/external/"
+            ls -la "cluster-up/cluster/external/"
+
             echo "calling cluster-up to prepare config and check whether cluster is reachable"
             bash -x ./cluster-up/up.sh
 
