Add openshift/oauth-apiserver repo

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -595,6 +595,7 @@ tide:
     - openshift/openshift-controller-manager
     - openshift/openshift-state-metrics
     - openshift/openshift-tuned
+    - openshift/oauth-apiserver
     - openshift/origin
     - openshift/origin-aggregated-logging
     - openshift/ovn-kubernetes
@@ -780,6 +781,7 @@ tide:
     - openshift/node-problem-detector
     - openshift/node-problem-detector-operator
     - openshift/oauth-proxy
+    - openshift/oauth-apiserver
     - openshift/oauth-server
     - openshift/oc
     - openshift/openshift-ansible
@@ -1005,6 +1007,7 @@ tide:
     - openshift/node-feature-discovery
     - openshift/node-problem-detector
     - openshift/node-problem-detector-operator
+    - openshift/oauth-apiserver
     - openshift/oauth-proxy
     - openshift/oauth-server
     - openshift/oc
