--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -1906,6 +1906,8 @@ plugins:
   - approve
   openshift/node_exporter:
   - approve
+  openshift/oauth-apiserver:
+  - approve
   openshift/oauth-proxy:
   - approve
   openshift/oauth-server:
