--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -507,6 +507,8 @@ periodics:
       - --ignore-repo=ci-operator/jobs/openshift/knative-serving
       - --ignore-repo=ci-operator/jobs/openshift/kubernetes
       - --ignore-repo=ci-operator/jobs/openshift/sig-storage-local-static-provisioner
+      - --ignore-repo=ci-operator/config/openshift/oauth-apiserver
+      - --ignore-repo=ci-operator/jobs/openshift/oauth-apiserver
       image: registry.svc.ci.openshift.org/ci/autoowners:latest
       imagePullPolicy: Always
       name: "autoowners"
