Auto-rotate CA certs for apiserver of build01

--- a/clusters/build-clusters/01_cluster/prow/03_deployment/admin_ca-cert-issuer_rbac.yaml
+++ b/clusters/build-clusters/01_cluster/prow/03_deployment/admin_ca-cert-issuer_rbac.yaml
@@ -60,3 +60,32 @@ items:
   - kind: ServiceAccount
     name: ca-cert-issuer
     namespace: ci
+- kind: Role
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: ca-cert-issuer
+    namespace: openshift-config
+  rules:
+    - apiGroups:
+        - ""
+      resources:
+        - secrets
+      verbs:
+        - create
+        - get
+        - list
+        - update
+        - patch
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: ca-cert-issuer
+    namespace: openshift-config
+  roleRef:
+    apiGroup: rbac.authorization.k8s.io
+    kind: Role
+    name: ca-cert-issuer
+  subjects:
+  - kind: ServiceAccount
+    name: ca-cert-issuer
+    namespace: ci
