--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -21,6 +21,9 @@ periodics:
             /acme/acme.sh --issue --dns dns_aws -d '*.apps.build01.ci.devcluster.openshift.com' --home /data --dnssleep 60 --fullchain-file /data/app.fullchain.cer --key-file /data/app.key --force
             ls -al /data
             oc --kubeconfig=/etc/build-farm-credentials/kubeconfig -n openshift-ingress create secret tls app-cert --cert=/data/app.fullchain.cer --key=/data/app.key --dry-run -o yaml | oc --kubeconfig=/etc/build-farm-credentials/kubeconfig -n openshift-ingress apply -f -
+            /acme/acme.sh --issue --dns dns_aws -d 'api.build01.ci.devcluster.openshift.com' --home /data --dnssleep 60 --fullchain-file /data/apiserver.fullchain.cer --key-file /data/apiserver.key --force
+            ls -al /data
+            oc --kubeconfig=/etc/build-farm-credentials/kubeconfig -n openshift-config create secret tls apiserver-cert --cert=/data/apiserver.fullchain.cer --key=/data/apiserver.key --dry-run -o yaml | oc --kubeconfig=/etc/build-farm-credentials/kubeconfig -n openshift-config apply -f -
         command:
           - /bin/bash
         env:
