Fix file patching

--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -62,7 +62,10 @@ tests:
     echo "KUBECONFIG: ${KUBECONFIG}"
 
     echo "patching cluster-up external provider"
-    curl -L -O -o cluster-up/cluster/external/provider.sh https://github.com/dhiller/kubevirtci/blob/fix-external-provider/cluster-up/cluster/external/provider.sh
+    (
+      cd cluster-up/cluster/external
+      curl -L -O -o provider.sh https://raw.githubusercontent.com/dhiller/kubevirtci/fix-external-provider/cluster-up/cluster/external/provider.sh
+    )
 
     echo "calling cluster-up to prepare config and check whether cluster is reachable"
     bash -x ./cluster-up/up.sh
