Add GCP tests to ocm
Enable e2e-gcp and e2e-gcp-builds tests for openshift-controller-manager.

--- a/ci-operator/config/openshift/openshift-controller-manager/openshift-openshift-controller-manager-master.yaml
+++ b/ci-operator/config/openshift/openshift-controller-manager/openshift-openshift-controller-manager-master.yaml
@@ -62,3 +62,11 @@ tests:
   commands: TEST_SUITE=openshift/build run-tests
   openshift_installer:
     cluster_profile: aws
+- as: e2e-gcp
+  commands: TEST_SUITE=openshift/conformance/parallel run-tests
+  openshift_installer:
+    cluster_profile: gcp
+- as: e2e-gcp-builds
+  commands: TEST_SUITE=openshift/build run-tests
+  openshift_installer:
+    cluster_profile: gcp
