--- a/ci-operator/config/openshift/openshift-controller-manager/openshift-openshift-controller-manager-release-4.5.yaml
+++ b/ci-operator/config/openshift/openshift-controller-manager/openshift-openshift-controller-manager-release-4.5.yaml
@@ -62,3 +62,11 @@ tests:
   commands: TEST_SUITE=openshift/build run-tests
   openshift_installer:
     cluster_profile: aws
+- as: e2e-gcp
+  commands: TEST_SUITE=openshift/conformance/parallel run-tests
+  openshift_installer:
+    cluster_profile: gcp
+- as: e2e-gcp-builds
+  commands: TEST_SUITE=openshift/build run-tests
+  openshift_installer:
+    cluster_profile: gcp
