preinstalls gotestsum that is required in order to execute k8s unit tests

--- a/projects/origin-release/rhel-7-golang-1.13/Dockerfile
+++ b/projects/origin-release/rhel-7-golang-1.13/Dockerfile
@@ -30,6 +30,7 @@ RUN go get golang.org/x/tools/cmd/cover \
         golang.org/x/tools/cmd/goimports \
         github.com/tools/godep \
         golang.org/x/lint/golint \
+        gotest.tools/gotestsum \
         github.com/openshift/release/tools/gotest2junit \
         github.com/openshift/imagebuilder/cmd/imagebuilder && \
     mv $GOPATH/bin/* /usr/bin/ && \
