--- a/projects/origin-release/golang-1.13/Dockerfile
+++ b/projects/origin-release/golang-1.13/Dockerfile
@@ -34,6 +34,7 @@ RUN yum install -y /tmp/origin-rpm/*.rpm && \
         golang.org/x/tools/cmd/goimports \
         github.com/tools/godep \
         golang.org/x/lint/golint \
+        gotest.tools/gotestsum \
         github.com/openshift/release/tools/gotest2junit \
         github.com/openshift/imagebuilder/cmd/imagebuilder && \
     mv $GOPATH/bin/* /usr/bin/ && \
