Use specific OLM namespace on OCP 4.1

--- a/ci-operator/jobs/openshift-knative/serverless-operator/openshift-knative-serverless-operator-release-1.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift-knative/serverless-operator/openshift-knative-serverless-operator-release-1.3-presubmits.yaml
@@ -92,7 +92,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: upgrade-tests-aws-ocp-41
         - name: TEST_COMMAND
-          value: make test-upgrade
+          value: OLM_NAMESPACE=openshift-operator-lifecycle-manager make test-upgrade
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
