--- a/ci-operator/config/openshift-knative/serverless-operator/openshift-knative-serverless-operator-release-1.3__4.1.yaml
+++ b/ci-operator/config/openshift-knative/serverless-operator/openshift-knative-serverless-operator-release-1.3__4.1.yaml
@@ -14,7 +14,7 @@ build_root:
     dockerfile_path: openshift/ci-operator/build-image/Dockerfile
 tests:
 - as: upgrade-tests-aws-ocp-41
-  commands: "make test-upgrade"
+  commands: "OLM_NAMESPACE=openshift-operator-lifecycle-manager make test-upgrade"
   openshift_installer_src:
     cluster_profile: aws
 resources:
