Modify nightly build e2e target
Signed-off-by: Nikhil Thomas <nikthoma@redhat.com>

--- a/ci-operator/config/openshift/tektoncd-pipeline-operator/openshift-tektoncd-pipeline-operator-release-next.yaml
+++ b/ci-operator/config/openshift/tektoncd-pipeline-operator/openshift-tektoncd-pipeline-operator-release-next.yaml
@@ -56,7 +56,7 @@ tests:
   container:
     from: src
 - as: e2e
-  commands: make test-e2e
+  commands: make -C  openshift test-e2e-nightly
   openshift_installer_src:
     cluster_profile: aws
 - as: csv
