--- a/ci-operator/jobs/openshift/tektoncd-pipeline-operator/openshift-tektoncd-pipeline-operator-release-next-presubmits.yaml
+++ b/ci-operator/jobs/openshift/tektoncd-pipeline-operator/openshift-tektoncd-pipeline-operator-release-next-presubmits.yaml
@@ -88,7 +88,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e
         - name: TEST_COMMAND
-          value: make test-e2e
+          value: make -C  openshift test-e2e-nightly
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
