boostrapping testing environment

--- a/ci-operator/config/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master.yaml
+++ b/ci-operator/config/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master.yaml
@@ -18,6 +18,7 @@ tests:
     commands: |
       set -euo pipefail
       echo "Running CNV product test"
+      ./bootstrap.sh
 
     openshift_installer_src:
       cluster_profile: gcp
