--- a/ci-operator/jobs/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master-presubmits.yaml
@@ -43,6 +43,7 @@ presubmits:
           value: |
             set -euo pipefail
             echo "Running CNV product test"
+            ./bootstrap.sh
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
